# users-package

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  DEPRECATED.md  DEPRECATEDv3.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup.py 
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: pr.yaml  pr.yml  release.yaml  release.yml  tests.yml
src/: __init__.py  users.py  vault.py
tests/: __init__.py  conftest.py  oldtests.tmp  test_auth_with_vault.py  test_authn.py  test_authz.py  test_check_permissions.py  test_dbengine.py  test_decorators.py  test_get_user.py  test_init.py  test_prechecks.py  test_rate_limits.py  test_ratelimits.py  test_tokens.py  test_user_access_check.py  test_users_access.py
tests/postgres/: initdb.sh  tables.sql
tests/vault/: policy.hcl
users/: __init__.py  constants.py  exceptions.py  ratelimiter.py  ratelimits.py  storage.py  users.py
