[tool.poetry]
name = "users"
version = "4.1.3"
description = "This python module is a simple implementation of user management functionality for telegram bots, such as: authentication, authorization and requests limiting."
authors = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
maintainers = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "users"}]
homepage = "https://github.com/obervinov/users-package"
repository = "https://github.com/obervinov/users-package"
documentation = "https://github.com/obervinov/users-package/blob/main/README.md"
keywords = ["users", "permissions", "authentication", "authorization", "telegram", "bot", "roles", "limiting", "rate", "limit", "rate-limit", "rate-limiting", "rate-limiting", "rate-limit"]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/obervinov/users-package/issues"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2"
logger = { git = "https://github.com/obervinov/logger-package.git", tag = "v2.0.4" }
vault  = { git = "https://github.com/obervinov/vault-package.git", tag = "v4.0.3" }

[tool.poetry.group.dev.dependencies]
pytest = "^9"
pylint = "^4"
flake8 = "^7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
